# endpointsecsdk

./: .gitignore  LICENSE  README.md  get-started.bat
HelloWorld/: .gitignore  README.md
HelloWorld-CPP/: README.md
HelloWorld-CPP/src/: .gitignore  HelloWorldCPP.sln
HelloWorld-Linux/: README.md
HelloWorld-Mac/: .gitignore  README.md  repomix-output.xml
HelloWorld-Mac/src/: build_sdk_downloader.sh  install-pre-req  run_example.sh
HelloWorld/src/: .gitignore  HelloWorld.sln  libwaapi.lib
OPSWAT-SDK-Downloader/C-Sharp/: ClientFiles.cs  Extractor.cs  Program.cs  SDKDownloader.sln  Util.cs
OPSWAT-SDK-Downloader/PythonSDKDownloader/: ClientFiles.py  Downloader.py  Extractor.py  HttpClientUtils.py  Util.py  download_token.txt  main.py
VAPM-Scanner/: .gitignore  README.md
VAPM-Scanner/__MACOSX/: ._license.cfg
catalog-scripts/AppCentricFile/: AppCentricFile.sln
download-patch/: README.md
eval-license/: README.md  instructions.txt
helloworld/: README.md
helloworld/linux-cpp/: .gitignore  README.md
helloworld/mac-cpp/: .gitignore  (+1 more)
scripts/: README.md
sdk-downloader/: README.md
security-score/: .gitignore
tools/: README.md
tools/simple-proxy/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
tools/simple-proxy/docs/: dynamic-library.md
tools/simple-proxy/examples/: embed_ctypes.py  proxy_download.py
tools/simple-proxy/include/: simple_proxy.h
tools/simple-proxy/src/: cache.rs  config.rs  discovery.rs  ffi.rs  firewall.rs  lib.rs  logging.rs  main.rs  security.rs  server.rs
tools/simple-proxy/tests/: functional_test.py
(+615 files in other folders)
